--- a/app/src/main/res/layout/image_type.xml
+++ b/app/src/main/res/layout/image_type.xml
@@ -1,5 +1,7 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -73,7 +75,7 @@
             <androidx.cardview.widget.CardView
                 android:id="@+id/card"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="300dp"
                 android:layout_marginTop="8dp"
                 card_view:cardCornerRadius="@dimen/eightDp"
                 card_view:layout_constraintEnd_toEndOf="parent"
@@ -81,15 +83,17 @@
                 card_view:layout_constraintTop_toBottomOf="@+id/imgUserPhoto">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
+                    android:background="@drawable/bg_emergency"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent">
 
                     <ImageView
                         android:id="@+id/imgContentPhoto"
                         android:layout_width="0dp"
-                        android:layout_height="300dp"
+                        android:layout_height="0dp"
                         android:adjustViewBounds="true"
                         android:contentDescription="@string/app_name"
+                        android:visibility="gone"
                         card_view:layout_constraintBottom_toBottomOf="parent"
                         card_view:layout_constraintEnd_toEndOf="parent"
                         card_view:layout_constraintStart_toStartOf="parent"
@@ -107,6 +111,23 @@
                         card_view:layout_constraintStart_toStartOf="@+id/imgContentPhoto"
                         card_view:layout_constraintTop_toTopOf="@+id/imgContentPhoto" />
 
+                    <com.skyfishjy.library.RippleBackground
+                        android:id="@+id/rippleContent"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:visibility="visible"
+                        app:rb_color="#FFD600"
+                        app:rb_duration="3000"
+                        app:rb_radius="64dp"
+                        app:rb_rippleAmount="6"
+                        app:rb_scale="6"
+                        card_view:layout_constraintBottom_toBottomOf="parent"
+                        card_view:layout_constraintEnd_toEndOf="parent"
+                        card_view:layout_constraintStart_toStartOf="parent"
+                        card_view:layout_constraintTop_toTopOf="parent">
+
+                    </com.skyfishjy.library.RippleBackground>
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
@@ -120,14 +141,14 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="8dp"
-                android:drawableStart="@drawable/ic_messagewhite"
                 android:drawablePadding="@dimen/eightDp"
                 android:text="@string/comments"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintStart_toStartOf="parent"
                 card_view:layout_constraintTop_toBottomOf="@+id/card"
-                card_view:layout_constraintVertical_bias="0.52" />
+                card_view:layout_constraintVertical_bias="0.52"
+                card_view:drawableStartCompat="@drawable/ic_messagewhite" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
