--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,7 +15,7 @@
         android:id="@+id/navigation_profile"
         android:name="com.dalilu.commandCenter.ui.profile.ProfileFragment"
         android:label="@string/profile"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_map" />
 
 
 </navigation>
