--- a/app/src/main/res/layout/layout_comment.xml
+++ b/app/src/main/res/layout/layout_comment.xml
@@ -37,7 +37,7 @@
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
-            android:id="@+id/txtDateTime"
+            android:id="@+id/txtDataTime"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -55,7 +55,7 @@
             android:layout_marginStart="8dp"
             android:text="@{comments.userName}"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/txtDateTime"
+            app:layout_constraintEnd_toStartOf="@+id/txtDataTime"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
