--- a/app/src/main/res/menu/switch_list_menu.xml
+++ b/app/src/main/res/menu/switch_list_menu.xml
@@ -2,13 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <item
-            android:id="@+id/reportMenu"
-            app:showAsAction="never"
-            android:icon="@drawable/ic_baseline_report_24"
-            android:title="@string/reportAct" />
+    <item
+        android:id="@+id/reportMenu"
+        app:showAsAction="never"
+        android:icon="@drawable/ic_baseline_report_24"
+        android:title="@string/reportAct" />
 
-
+    <item
+        android:id="@+id/navigation_maps"
+        android:icon="@drawable/ic_baseline_map_24"
+        android:title="@string/title_activity_maps" />
 
 
 </menu>
