--- a/app/src/main/res/layout/activity_image_view.xml
+++ b/app/src/main/res/layout/activity_image_view.xml
@@ -65,11 +65,11 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:drawableStart="@drawable/cloud"
             android:textColor="@color/fb"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
+            app:drawableStartCompat="@drawable/cloud"
             app:layout_constraintTop_toBottomOf="@+id/divider3" />
 
         <View
