--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
             app:menu="@menu/bottom_nav_menu" />
 
 
-        <androidx.recyclerview.widget.RecyclerView
+      <!--  <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView_home"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -51,11 +51,10 @@
             app:layout_constraintBottom_toTopOf="@id/nav_view"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />-->
 
 
-        <!--
-                <fragment
+        <fragment
                     android:id="@+id/nav_host_fragment"
                     android:name="androidx.navigation.fragment.NavHostFragment"
                     android:layout_width="0dp"
@@ -66,7 +65,6 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:navGraph="@navigation/mobile_navigation" />
-        -->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
