--- a/app/src/main/res/layout/activity_image_view.xml
+++ b/app/src/main/res/layout/activity_image_view.xml
@@ -11,7 +11,7 @@
 
         <ImageView
             android:id="@+id/imgView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="16dp"
             android:contentDescription="@string/app_name"
