--- a/app/src/main/res/layout/video_type_grid.xml
+++ b/app/src/main/res/layout/video_type_grid.xml
@@ -75,6 +75,18 @@
                 card_view:layout_constraintStart_toEndOf="@+id/imgUserPhoto"
                 card_view:layout_constraintTop_toTopOf="@+id/imgUserPhoto" />
 
+            <ImageView
+                android:id="@+id/imgVid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:contentDescription="@string/uploadingVideo"
+                app:layout_constraintEnd_toEndOf="@+id/imgChecked"
+                app:layout_constraintHorizontal_bias="0.51"
+                app:layout_constraintStart_toStartOf="@+id/imgChecked"
+                app:layout_constraintTop_toBottomOf="@+id/imgChecked"
+                card_view:srcCompat="@drawable/ic_baseline_videocam_24" />
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/card"
                 android:layout_width="0dp"
